[workspace]

resolver = "2"
members = [ 
  "crates/bradipous-curves",
  "crates/bradipous-feeder",
  "crates/bradipous-geom",
  "crates/bradipous-planner", "crates/feeder", "crates/protocol",
]

exclude = [ "embedded/bradipograph" ]

[workspace.dependencies]
kurbo = { git = "https://github.com/jneem/kurbo", branch = "no-alloc", default-features = false }
