[workspace]

resolver = "2"
members = [ 
  "crates/feeder",
  "crates/geom",
  "crates/planner",
  "crates/protocol",
  "crates/sketcher",
]

exclude = [ "embedded/bradipograph" ]

[workspace.dependencies]
kurbo = { git = "https://github.com/jneem/kurbo", branch = "no-alloc", default-features = false }
