[package]
name = "bradipous-feeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
bradipous-protocol = { version = "0.1.0", path = "../protocol" }
btleplug = "0.11.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.29"
postcard = "1.0.8"
ratatui = "0.24.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.14"
uuid = "1.6.1"
