[package]
name = "bradipous-planner"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
kurbo = { version = "0.10.4", features = ["serde"] }
serde = { version = "1.0.190", default-features = false, features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
serde_json = "1.0.107"
usvg = "0.36.0"
