[package]
name = "bradipous-feeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
bradipous-geom = { version = "0.1.0", path = "../geom" }
bradipous-planner = { version = "0.1.0", path = "../planner" }
bradipous-protocol = { version = "0.1.0", path = "../protocol" }
btleplug = "0.11.3"
clap = { version = "4.4.11", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.29"
indicatif = "0.17.7"
kurbo = { workspace = true, features = ["std"] }
postcard = { version = "1.0.8", features = ["alloc"] }
reedline = "0.26.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "sync"] }
usvg = "0.37.0"
uuid = "1.6.1"
