[package]
name = "bradipous-geom"
version = "0.1.0"
edition = "2021"

[features]
std = ["bradipous-planner/std"]
default = ["std"]

[dependencies]
bradipous-planner = { version = "0.1.0", path = "../planner", default-features = false }
kurbo = { workspace = true, default-features = false, features = ["libm"] }
libm = "0.2.8"

[dev-dependencies]
proptest = "1.4.0"
