[package]
name = "bradipous-planner"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["bradipous-curves/std", "kurbo/std"]

[dependencies]
heapless = { version = "0.8.0", features = ["serde"] }
kurbo = { workspace = true, default-features = false, features = ["serde", "libm"] }
serde = { version = "1.0.190", default-features = false, features = ["derive"] }
bradipous-curves = { path = "../curves", default-features = false }
libm = "0.2.8"
fixed = "1.24.0"

[dev-dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
proptest = "1.4.0"
proptest-derive = "0.4.0"
serde_json = "1.0.107"
usvg = "0.36.0"
