[package]
name = "bradipous-planner"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
heapless = { version = "0.8.0", features = ["serde"] }
kurbo = { workspace = true, features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
bradipous-curves = { path = "../curves" }
libm = "0.2.8"
fixed = "1.24.0"

[dev-dependencies]
anyhow = "1.0.75"
bradipous-geom = { path = "../geom" }
clap = { version = "4.4.7", features = ["derive"] }
proptest = "1.4.0"
proptest-derive = "0.4.0"
serde_json = "1.0.107"
usvg = "0.36.0"
