[package]
name = "bradipo-planner"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
kurbo = { workspace = true, features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.75"
bradipo-geom = { path = "../geom" }
clap = { version = "4.4.7", features = ["derive"] }
kurbo = { workspace = true, features = ["std"] }
piet = "0.6.2"
piet-svg = "0.6.2"
proptest = "1.4.0"
proptest-derive = "0.4.0"
serde_json = "1.0.107"
usvg = "0.36.0"
