[package]
name = "bradipous-protocol"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
bradipous-curves = { version = "0.1.0", path = "../curves", default-features = false }
bradipous-geom = { version = "0.1.0", path = "../geom", default-features = false }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
