[package]
name = "bradipous-protocol"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
bradipous-geom = { version = "0.1.0", path = "../geom", default-features = false }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }

[dev-dependencies]
proptest = "1.4.0"
