[package]
name = "bradipo-protocol"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["euclid/std"]

[dependencies]
bradipo-geom = { version = "0.1.0", path = "../geom", default-features = false }
euclid = { version = "0.22.9", default-features = false, features = ["libm", "serde"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }

[dev-dependencies]
proptest = "1.4.0"
