[package]
name = "bradipograph"
version = "0.1.0"
edition = "2021"

[dependencies]
bleps = { git = "https://github.com/bjoernQ/bleps", version = "0.1.0", features = ["async", "mtu256", "macros"] }
bradipous-geom = { path = "../../crates/geom", default-features = false }
bradipous-protocol = { path = "../../crates/protocol", default-features = false }
embassy-executor = { version = "0.4", features = ["nightly"] }
embassy-sync = "0.5.0"
embassy-time = { version = "0.2" }
embedded-hal = "0.2.7"
embedded-hal-async = "1.0.0-rc.2"
embedded-storage = "0.3.1"
esp-backtrace = { version = "0.9.0", features = ["esp32c3", "esp-println", "print-uart", "panic-handler"] }
esp-println = { version = "0.7.1", default-features = false, features = ["esp32c3"] }
esp-storage = { version = "0.3.0", features = ["esp32c3"] }
esp-wifi = { version = "0.2.0", default-features = false, features = ["ble", "esp32c3", "async"] }
esp32c3-hal = { version = "0.14.0", features = ["embassy", "embassy-time-timg0", "async", "embassy-executor-thread"] }
fixed = "1.24.0"
futures = { version = "0.3.29", default-features = false }
heapless = { version = "0.8.0", features = ["serde", "portable-atomic"] }
libm = "0.2.8"
num-derive = { version = "0.4.1", default-features = false }
num-traits = { version = "0.2.17", default-features = false }
postcard = "1.0.8"
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
static_cell = "2.0.0"
